# lazydiff

./: .gitignore  AGENTS.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  install  plan.md
.github/workflows/: ci.yml  release.yml
apps/lazydiff-v2-gui/: Cargo.toml
apps/lazydiff-v2-gui/src/: main.rs
apps/lazydiff-v2-server/: Cargo.toml
apps/lazydiff-v2-server/src/: main.rs
apps/lazydiff-v2-tui/: Cargo.toml
apps/lazydiff-v2-tui/src/: main.rs
crates/lazydiff-diffs/: Cargo.toml
crates/lazydiff-diffs/src/: gutter.rs  inline_diff.rs  lib.rs  metadata.rs  pierre.rs  scrollbar.rs  selection.rs  text.rs  theme.rs  viewer.rs
crates/ratatui-diffs/: Cargo.toml
crates/ratatui-diffs/src/: gutter.rs  inline_diff.rs  pierre.rs  selection.rs
docs/: MIGRATION.md  NORTH_STAR.md  TUI_VERIFICATION.md  semantic-review-product-flow.md
docs/adr/: 0001-diff-workspace-and-decorations.md  0002-extension-shaped-internals-before-public-plugin-api.md  0003-reducer-first-diff-workspace-update-loop.md  0004-rust-owned-diff-workspace-state.md  0005-unified-visual-row-stream-with-dirty-cache.md  0006-app-shell-router-and-surface-owners.md  0007-async-effects-and-generation-tokens.md  0008-commands-keymaps-and-chrome-contribution-points.md  0009-clean-tui-rewrite.md
docs/features/: README.md
docs/features/001-diff-workspace/: DECISIONS.md  README.md  RULES.md  issues.json  plan.md  spec.md
docs/features/002-clean-tui-rewrite/: ARCHITECTURE.md  DECISIONS.md  README.md  RULES.md  issues.json  plan.md  spec.md
docs/learning/: ownership-walkthrough.md
docs/research/: README.md  pi-mono.md  pierre.md  prosemirror.md  rust-modules-and-visibility.md  synthesis.md  xstate.md
docs/work/: README.md  issues.json
scripts/: dev-watch-tui.sh  test-changes-panel-navigation-termwright.sh  test-diff-navigation-termwright.sh  test-i-creates-inline-note-termwright.sh  test-inline-note-editor-termwright.sh  test-v2-diff-render-termwright.sh  test-visual-selection-termwright.sh  tui-verify.sh  work.sh
src/: app.rs  bounded_map.rs  commands.rs  design_system.rs  highlight_daemon.rs  main.rs  server_query.rs
src/app/: diff_buffer.rs  finder.rs  highlight_coordinator.rs  input.rs  modals.rs  queries.rs  selection.rs  semantic.rs  surfaces.rs  workspace.rs
src/components/: app_chrome.rs  command_palette.rs  mod.rs
src/forge/: credentials.rs  detect.rs  gitea.rs  gitlab.rs  mod.rs
src/github/: mod.rs  models.rs  patch.rs  service.rs  worktree.rs
src/persistence/: mod.rs  review_store.rs
src/text/: markdown.rs  mod.rs
src/ui/: mod.rs
