[package]
name = "lazydiff-v2-gui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "lazydiff-gui-v2"
path = "src/main.rs"

[dependencies]
color-eyre = "0.6"
gpui = { git = "https://github.com/zed-industries/zed" }
gpui-component = { git = "https://github.com/longbridge/gpui-component", package = "gpui-component" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit", "x11", "wayland", "runtime_shaders"] }
lazydiff-v2-client = { path = "../../packages/lazydiff-v2-client" }
serde_json = "1"
