[package]
name = "ratatui-diffs"
version = "0.1.0"
edition = "2021"
description = "Ratatui widgets and parsing helpers for LazyDiff"
license = "MIT"

[dependencies]
giallo = { version = "0.3.1", features = ["dump"] }
ratatui = "0.29"
tree-sitter = "0.26"
tree-sitter-highlight = "0.26"
tree-sitter-cpp = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-md = { version = "0.5", features = ["parser"] }
tree-sitter-typescript = "0.23"
unicode-width = "0.2"
